--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     environment:
       - DJANGO_SECRET_KEY=django-insecure-ui8bn3y%)lgl0no#t=6+pvfe9iz2&o^zz=43_xh#f%iu0q0=%7
       - DJANGO_DEBUG=True
-      - DJANGO_ALLOWED_HOST=maintenance.home
+      - DJANGO_ALLOWED_HOST=localhost
       - DJANGO_DB_NAME=postgres
       - DJANGO_DB_USER=postgres
       - DJANGO_DB_PASSWORD=postgres
