--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       - DJANGO_DB_HOST=db
       - DJANGO_DB_PORT=5432
     volumes:
-      - ./maintenance:/code
+      - .:/code
     ports:
       - "8000:8000"
     depends_on:
