Corrected secret key assignment by moving it to a file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,4 +31,5 @@ services:
       - db
 
 secrets:
-  django_key: django-insecure-ui8bn3y%)lgl0no#t=6+pvfe9iz2&o^zz=43_xh#f%iu0q0=%7
+  django_key:
+    file: examplekey
