Fixed issue with web service not having access to database password

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     command: python manage.py runserver 0.0.0.0:8000
     secrets:
       - django_key
+      - db_password
     environment:
       - DJANGO_SECRET_KEY_FILE=/run/secrets/django_key
       - DJANGO_DEBUG=True
